# rp2040

./: CMakeLists.txt  GUIDE.md  README.md  blink.c  blink.py  build.sh
rp2350/: CMakeLists.txt  GUIDE.md  README.md  blink.c  build.sh
